--- a/Aerolínea/pages/sobreNosotros.html
+++ b/Aerolínea/pages/sobreNosotros.html
@@ -13,9 +13,9 @@
     <link href="../css/menu.css" rel="stylesheet">
     <link href="../css/menuInicio.css" rel="stylesheet">
     <script src="../js/menuIndex.js" defer></script>
-    <script src="../js/footerIndex.js" defer></script>
-    <script  type = "module"  src = "https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" > </script> 
-  <script  nomodule  src = "https://unpkg .com/ionicons@7.1.0/dist/ionicons/ionicons.js" > </script>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"> </script>
+    <script nomodule src="https://unpkg .com/ionicons@7.1.0/dist/ionicons/ionicons.js"> </script>
     <title>Vuelos Semanales | Aerolínea</title>
 </head>
 
@@ -37,56 +37,56 @@
             </div>
         </div>
 
-            <nav class="navegacion">
-                <ul>
-                    <li>
-                        <a id="inbox" href="../index.html">
-                            <ion-icon name="home-outline"></ion-icon>
-                            <span>Inicio</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="vuelosemanales.html">
-                            <ion-icon name="airplane-outline"></ion-icon>
-                            <span>Vuelos Diarios</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="reservas.html">
-                            <ion-icon name="clipboard-outline"></ion-icon>
-                            <span>Reservas</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="misreservas.html">
-                            <ion-icon name="person-circle-outline"></ion-icon>
-                            <span>Mis reservas</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="sobreNosotros.html">
-                            <ion-icon name="people-circle-outline"></ion-icon>
-                            <span>Sobre nosotros</span>
-                        </a>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
+        <nav class="navegacion">
+            <ul>
+                <li>
+                    <a id="inbox" href="../index.html">
+                        <ion-icon name="home-outline"></ion-icon>
+                        <span>Inicio</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="vuelosemanales.html">
+                        <ion-icon name="airplane-outline"></ion-icon>
+                        <span>Vuelos Diarios</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="reservas.html">
+                        <ion-icon name="clipboard-outline"></ion-icon>
+                        <span>Reservas</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="misreservas.html">
+                        <ion-icon name="person-circle-outline"></ion-icon>
+                        <span>Mis reservas</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="sobreNosotros.html">
+                        <ion-icon name="people-circle-outline"></ion-icon>
+                        <span>Sobre nosotros</span>
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
 
 
-            <div class="linea"></div>
-            <br>
-        </div>
-    <div class="container"> 
+                    <div class="linea"></div>
+                    <br>
+    </div>
+    <div class="container">
         <div class="cont7 container-fluid">
             <div class="imge">
-                <img src="../img/sobrenosotros1.jpg" ; class="imagen">
-                <img src="../img/sobrenosotros2.jpg" ; class="imghover">
+                <img src="../img/sobrenosotros2.jpg" ; class="imagen">
+                <img src="../img/sobrenosotros1.jpg" ; class="imghover">
             </div>
             <div class="cont3">
                 <h2 class="texto11">¿Quiénes somos?</h2>
                 <br>
-                <p class="texto22">En , nos enorgullecemos de conectar a personas y
+                <p class="texto22">En SkyWings, nos enorgullecemos de conectar a personas y
                     lugares de una manera segura, eficiente y memorable. Con décadas de experiencia en la industria
                     de la aviación, hemos establecido un estándar de excelencia en el servicio al cliente y la operación
                     de vuelos a nivel mundial.</p>
@@ -95,20 +95,23 @@
         </div>
         <br>
         <br>
-        
+
         <div class="cont2 container-fluid">
             <div class="cont3">
+                <br>
                 <h2 class="texto11">¿Por qué elegirnos?</h2>
                 <br>
-                <p class="texto22">En , no solo nos preocupamos por llegar a destino, sino también por 
-                    cómo llegas allí. Nuestro compromiso con la seguridad, la comodidad y la sostenibilidad ambiental es 
-                    innegociable. Trabajamos diligentemente para incorporar las últimas tecnologías y prácticas de la industria para minimizar 
-                    nuestro impacto en el medio ambiente y garantizar un futuro más limpio para las generaciones venideras.</p>
+                <p class="texto22">En SkyWings, no solo nos preocupamos por llegar a destino, sino también por
+                    cómo llegas allí. Nuestro compromiso con la seguridad, la comodidad y la sostenibilidad ambiental es
+                    innegociable. Trabajamos diligentemente para incorporar las últimas tecnologías y prácticas de la
+                    industria para minimizar
+                    nuestro impacto en el medio ambiente y garantizar un futuro más limpio para las generaciones
+                    venideras.</p>
                 <br>
             </div>
             <div class="imge">
-                <img src="../img/sobrenosotros3.jpg"; class="imagen"> 
-                <img src="../img/sobrenosotros4.jpg"; class="imghover">
+                <img src="../img/sobrenosotros3.jpg" ; class="imagen">
+                <img src="../img/sobrenosotros4.jpg" ; class="imghover">
             </div>
         </div>
 
@@ -116,69 +119,72 @@
 
         <div class="row">
             <div class="col-sm-6 mb-3 mb-sm-0">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Misión</h5>
-                  <p class="card-text">Facilitar conexiones significativas alrededor del mundo, brindando a nuestros pasajeros 
-                    experiencias de viaje inolvidables y seguras. Ya sea que estén volando por negocios o por placer, 
-                    nos esforzamos por superar las expectativas de cada uno de nuestros clientes en cada etapa de su viaje.</p>
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Misión</h5>
+                        <p class="card-text">Facilitar conexiones significativas alrededor del mundo, brindando a
+                            nuestros pasajeros
+                            experiencias de viaje inolvidables y seguras. Ya sea que estén volando por negocios o por
+                            placer,
+                            nos esforzamos por superar las expectativas de cada uno de nuestros clientes en cada etapa
+                            de su viaje.</p>
+                    </div>
                 </div>
-              </div>
             </div>
             <div class="col-sm-6">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Visión</h5>
-                  <p class="card-text">Ser la elección preferida de viaje para los viajeros de todo el mundo, ofreciendo conexiones sin límites y experiencias de viaje 
-                    inolvidables que enriquezcan la vida de nuestros pasajeros y fortalezcan los lazos que unen a la humanidad.</p>
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Visión</h5>
+                        <p class="card-text">Ser la elección preferida de viaje para los viajeros de todo el mundo,
+                            ofreciendo conexiones sin límites y experiencias de viaje
+                            inolvidables que enriquezcan la vida de nuestros pasajeros y fortalezcan los lazos que unen
+                            a la humanidad.</p>
+                    </div>
                 </div>
-              </div>
             </div>
-</div>
-<br><br>
-
-<div class="container text-center">
-    <div class="row row-cols-12">
-<div class="col">
-
-    <h2>
-        Redes sociales
-    </h2>
-    <br><br>
-</div>
-</div>
-</div>
-<div class="container text-center">
-    <div class="row row-cols-12">
-
-        <div class="col-sm-4">
-
-            <a href="https://instagram.com/cc_15s?igshid=OGQ5ZDc2ODk2ZA==">
-                <img class="imagen2" src="../img/instagram.png" width="40">
-            </a>
-            <a href="https://instagram.com/cc_15s?igshid=OGQ5ZDc2ODk2ZA==">
-            </a>
-
         </div>
-        <div class="col-sm-4">
-            <a href="https://www.facebook.com/emilynicole.jacobocampos?mibextid=9R9pXO">
-                <img class="imagen2" src="../img/facebook.png" width="40">
-            </a>
-            <a href="https://www.facebook.com/emilynicole.jacobocampos?mibextid=9R9pXO">
-            </a>
-        </div>
-        <div class="col-sm-4">
-            <a href="https://wa.me/72089786">
-                <img class="imagen2" src="../img/whatsapp.png" width="40">
-            </a>
+        <br><br>
 
+        <div class="container text-center">
+            <div class="row row-cols-12">
+                <div class="col">
+
+                    <h2>
+                        Redes sociales
+                    </h2>
+                    <br><br>
+                </div>
+            </div>
+        </div>
+        <div class="container text-center">
+            <div class="row row-cols-12">
+
+                <div class="col-sm-4">
+
+                    <a href="https://instagram.com/cc_15s?igshid=OGQ5ZDc2ODk2ZA==">
+                        <img class="imagen2" src="../img/instagram.png" width="40">
+                    </a>
+                    <a href="https://instagram.com/cc_15s?igshid=OGQ5ZDc2ODk2ZA==">
+                    </a>
+
+                </div>
+                <div class="col-sm-4">
+                    <a href="https://www.facebook.com/emilynicole.jacobocampos?mibextid=9R9pXO">
+                        <img class="imagen2" src="../img/facebook.png" width="40">
+                    </a>
+                    <a href="https://www.facebook.com/emilynicole.jacobocampos?mibextid=9R9pXO">
+                    </a>
+                </div>
+                <div class="col-sm-4">
+                    <a href="https://wa.me/72089786">
+                        <img class="imagen2" src="../img/whatsapp.png" width="40">
+                    </a>
+
+                </div>
+            </div>
         </div>
     </div>
 </div>
-
-</div>
-</div>
-
 
     <br>
     <div class="container text-center">
@@ -186,12 +192,14 @@
 
     </div>
 
-    <div id="footerContenedor"></div>
+    
+
+
 
     <script src="bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js"></script>
     <script src="../bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/cargarMenuIndex.js"></script>
-    <script src="js/cargarFooterIndex.js"></script>
+
     <script src="js/index.js"></script>
 </body>
 
