cambios en pag sobre nosotros

--- a/Aerolínea/pages/sobreNosotros.html
+++ b/Aerolínea/pages/sobreNosotros.html
@@ -77,7 +77,7 @@
                     <div class="linea"></div>
                     <br>
     </div>
-    <div class="container">
+    <div class="container2">
         <div class="cont7 container-fluid">
             <div class="imge">
                 <img src="../img/sobrenosotros2.jpg" ; class="imagen">
@@ -183,7 +183,7 @@
                 </div>
             </div>
         </div>
-    </div>
+
 </div>
 
     <br>
