--- a/Aerolínea/pages/vuelosemanales.html
+++ b/Aerolínea/pages/vuelosemanales.html
@@ -116,7 +116,7 @@
                     <div id="ter">Terminal-</div>
                 </div>
             </div>
-            
+
             <div id="contenedordeinline">
                 <div id="globouno">
                     <div>Copa</div>
@@ -128,6 +128,104 @@
                 </div>
                 <div id="globotres">
                     <div id="letrabo">En la puerta</div>
+                    <div id="ter">Terminal-</div>
+                </div>
+            </div>
+
+            <div id="contenedordeinline">
+                <div id="globouno">
+                    <div>Avicanca</div>
+                    <div>AV451</div>
+                </div>
+                <div id="globodos">
+                    <h6>18:55</h6>
+                    <div id="letrarr">Managua</div>
+                </div>
+                <div id="globotres">
+                    <div id="letrabo">En la puerta</div>
+                    <div id="ter">Terminal-</div>
+                </div>
+            </div>
+
+            <div id="contenedordeinline">
+                <div id="globouno">
+                    <div>Iberia</div>
+                    <div>IB6342</div>
+                </div>
+                <div id="globodos">
+                    <h6>19:30</h6>
+                    <div id="letrarr">Ciudad de Guatemala</div>
+                </div>
+                <div id="globotres">
+                    <div id="letrabo">En el aire</div>
+                    <div id="ter">Terminal 4s</div>
+                </div>
+            </div>
+            <br>
+            <article>
+                <h3>salidas</h3>
+                <br>
+                <span>Busqueda rapida</span>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+            </article>
+            <br>
+            <div id="contenedordeinline">
+                <div id="globouno">
+                    <div>Avianca</div>
+                    <div>AV588</div>
+                </div>
+                <div id="globodos">
+                    <h6>17:45</h6>
+                    <div id="letrarr">Ciudad de Guatemala</div>
+                </div>
+                <div id="globotres">
+                    <div id="letrabo">En la puerta</div>
+                    <div id="ter">Terminal-</div>
+                </div>
+            </div>
+            <div id="contenedordeinline">
+                <div id="globouno">
+                    <div>TAG Airlines</div>
+                    <div>5U214</div>
+                </div>
+                <div id="globodos">
+                    <h6>20:55</h6>
+                    <div id="letrarr">Ciudad de Guatemala</div>
+                </div>
+                <div id="globotres">
+                    <div id="letrabo">Programado</div>
+                    <div id="ter">Terminal-</div>
+                </div>
+            </div>
+            <div id="contenedordeinline">
+                <div id="globouno">
+                    <div>Iberia</div>
+                    <div>
+                        IB6342</div>
+                </div>
+                <div id="globodos">
+                    <h6>21:00</h6>
+                    <div id="letrarr">Madrid-Barajas</div>
+                </div>
+                <div id="globotres">
+                    <div id="letrabo">Rodaje en tierra</div>
+                    <div id="ter">Terminal-d4</div>
+                </div>
+            </div>
+            <div id="contenedordeinline">
+                <div id="globouno">
+                    <div>Avianca</div>
+                    <div>AV580</div>
+                </div>
+                <div id="globodos">
+                    <h6>22:25</h6>
+                    <div id="letrarr">Washington Dulles</div>
+                </div>
+                <div id="globotres">
+                    <div id="letrabo">Programado</div>
                     <div id="ter">Terminal-</div>
                 </div>
             </div>
