--- a/Aerolínea/pages/reservas.html
+++ b/Aerolínea/pages/reservas.html
@@ -11,8 +11,11 @@
   <link href="../css/indexEstilo.css" rel="stylesheet">
   <link href="../css/menu.css" rel="stylesheet">
   <link href="../css/menuInicio.css" rel="stylesheet">
+  <link href="../css/reservas.css" rel="stylesheet">
   <script src="../js/menuIndex.js" defer></script>
   <script src="../js/footerIndex.js" defer></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <link href="../bootstrap-5.3.1-dist/css/bootstrap.min.css" rel="stylesheet">
   <script  type = "module"  src = "https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" > </script> 
   <script  nomodule  src = "https://unpkg .com/ionicons@7.1.0/dist/ionicons/ionicons.js" > </script>
   <title>Vuelos Semanales | Aerolínea</title>
@@ -82,7 +85,6 @@
   <div class="container py-5">
     <br>
     <br>
-    <img src="../img/bannerLicencia.png" class="banner">
     <div class="row justify-content-center">
       <div class="col-md-8 col-lg-6 col-xl-4">
         <div class="card" style="border-radius: 15px;">
@@ -135,7 +137,6 @@
   <script src="js/cargarMenuIndex.js"></script>
   <script src="js/cargarFooterIndex.js"></script>
   <script src="js/index.js"></script>
-  <script src="js/js.reservas.js"></script>
-
+  <script src="../js/reservas.js"></script>
 </body>
 </html>
