--- a/Aerolínea/pages/reservas.html
+++ b/Aerolínea/pages/reservas.html
@@ -14,6 +14,7 @@
   <link href="../css/reservas.css" rel="stylesheet">
   <script src="../js/menuIndex.js" defer></script>
   <script src="../js/footerIndex.js" defer></script>
+  <script src="../js/reservas.js" defer></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link href="../bootstrap-5.3.1-dist/css/bootstrap.min.css" rel="stylesheet">
   <script  type = "module"  src = "https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" > </script> 
@@ -121,7 +122,7 @@
           <hr class="my-0" />
           <div class="card-body">
             <div class="d-flex justify-content-between align-items-center pb-2 mb-1">
-              <a href="../pages/Licencias.html" class="text-dark fw-bold cancelar">Cancelar</a>
+              <a href="../pages/reservas.html" class="text-dark fw-bold cancelar">Cancelar</a>
               <button type="button" class="btn btn-dark" id="comprarBtn">Confirmar compra</button>
               
             </div>
@@ -130,9 +131,14 @@
       </div>
     </div>
   </div>
+
+  
+  
+
   <div id="footerContenedor"></div>
 
   <script src="bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script>
   <script src="../bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/cargarMenuIndex.js"></script>
   <script src="js/cargarFooterIndex.js"></script>
