--- a/Aerolínea/pages/sobreNosotros.html
+++ b/Aerolínea/pages/sobreNosotros.html
@@ -117,33 +117,43 @@
 
         <br> <br>
 
-        <div class="row">
-            <div class="col-sm-6 mb-3 mb-sm-0">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Misión</h5>
-                        <p class="card-text">Facilitar conexiones significativas alrededor del mundo, brindando a
-                            nuestros pasajeros
-                            experiencias de viaje inolvidables y seguras. Ya sea que estén volando por negocios o por
-                            placer,
-                            nos esforzamos por superar las expectativas de cada uno de nuestros clientes en cada etapa
-                            de su viaje.</p>
-                    </div>
-                </div>
+    
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                  Misión
+                </button>
+              </h2>
+              <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">Facilitar conexiones significativas alrededor del mundo, brindando a
+                    nuestros pasajeros
+                    experiencias de viaje inolvidables y seguras. Ya sea que estén volando por negocios o por
+                    placer,
+                    nos esforzamos por superar las expectativas de cada uno de nuestros clientes en cada etapa
+                    de su viaje.</div>
+              </div>
             </div>
-            <div class="col-sm-6">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Visión</h5>
-                        <p class="card-text">Ser la elección preferida de viaje para los viajeros de todo el mundo,
-                            ofreciendo conexiones sin límites y experiencias de viaje
-                            inolvidables que enriquezcan la vida de nuestros pasajeros y fortalezcan los lazos que unen
-                            a la humanidad.</p>
-                    </div>
-                </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                  Visión
+                </button>
+              </h2>
+              <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">Ser la elección preferida de viaje para los viajeros de todo el mundo,
+                    ofreciendo conexiones sin límites y experiencias de viaje
+                    inolvidables que enriquezcan la vida de nuestros pasajeros y fortalezcan los lazos que unen
+                    a la humanidad.</div>
+              </div>
             </div>
-        </div>
-        <br><br>
+          </div>
+
+
+          <br><br>
+
+
+
 
         <div class="container text-center">
             <div class="row row-cols-12">
