--- a/Aerolínea/pages/misreservas.html
+++ b/Aerolínea/pages/misreservas.html
@@ -174,5 +174,11 @@
 
                         </div>
                     </div>
+
+                    <footer class="bg-warning text-white text-center py-3 mt-5">
+                        <center>
+                            <p>Copyright &copy; 2023 | Equipo de Aerolínea</p>
+                        </center>
+                       </footer>
                   
 </body>
