--- a/Aerolínea/pages/sobreNosotros.html
+++ b/Aerolínea/pages/sobreNosotros.html
@@ -193,13 +193,18 @@
 
     
 
-
-
+    <footer class="bg-warning text-white text-center py-3 mt-5">
+            <center>
+                <p>Copyright &copy; 2023 | Equipo de Aerolínea</p>
+            </center>
+           </footer>
+  
     <script src="bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js"></script>
     <script src="../bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/cargarMenuIndex.js"></script>
+   
 
-    <script src="js/index.js"></script>
+   
 </body>
 
 </html>
