--- a/Aerolínea/index.html
+++ b/Aerolínea/index.html
@@ -174,12 +174,16 @@
   </main>
   </div>
 
+  <footer class="bg-warning text-white text-center py-3 mt-5">
+    <center>
+        <p>Copyright &copy; 2023 | Equipo de Aerolínea</p>
+    </center>
+   </footer>
   <div id="footerContenedor"></div>
 
   <script src="bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js"></script>
   <script src="../bootstrap-5.3.1-dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/cargarMenuIndex.js"></script>
-  <script src="js/cargarFooterIndex.js"></script>
   <script src="js/index.js"></script>
 </body>
 
